remove page-sidebar-fixed class from the body and set alignment of the toggle button

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -235,9 +235,9 @@
   z-index: 10000;
 }
 
-.page-sidebar-menu {
-  z-index: 10000 !important;
-}
+// .page-sidebar-menu {
+//   z-index: 10000 !important;
+// }
 .tooltip-inner {
   background-color: lighten($secondary-color, 5%) !important;
   color: #ffffff !important;
