--- a/app/assets/stylesheets/vendor-overrides/metronic_layout_child.scss
+++ b/app/assets/stylesheets/vendor-overrides/metronic_layout_child.scss
@@ -72,9 +72,9 @@ Page Header
   margin: 18px 6px 0 6px;
 }
 .page-header.navbar .menu-toggler.sidebar-toggler {
-  float: right;
+  float: left;
   display: inline-block;
-  margin: 15px 0 0 0;
+  margin: 3px 0 0 120px;
 }
 
 .page-header.navbar .search-form {
@@ -137,9 +137,9 @@ Page Header
   height: 16px;
 }
 .page-header.navbar .menu-toggler.sidebar-toggler {
-  float: right;
+  float: left;
   display: inline-block;
-  margin: 15px 0 0 0;
+  margin: 3px 0 0 120px;
 }
 .page-header.navbar .top-menu .navbar-nav > li.dropdown {
   height:67px;
@@ -331,9 +331,9 @@ Page sidebar
   margin: 18px 6px 0 6px;
 }
 .page-header.navbar .menu-toggler.sidebar-toggler {
-  float: right;
+  float: left;
   display: inline-block;
-  margin: 15px 0 0 0;
+  margin: 3px 0 0 120px;
 }
 
 
@@ -400,9 +400,9 @@ Page sidebar
   height: 16px;
 }
 .page-header.navbar .menu-toggler.sidebar-toggler {
-  float: right;
+  float: left;
   display: inline-block;
-  margin: 15px 0 0 0;
+  margin: 3px 0 0 120px;
 }
 .page-header.navbar .top-menu .navbar-nav > li.dropdown {
   height:35px;
